[gd_scene load_steps=5 format=3 uid="uid://c5xdu2ub8esh4"]

[ext_resource type="Script" uid="uid://bj7wvsiimhclf" path="res://glitch_pad.gd" id="1_sximq"]
[ext_resource type="PackedScene" uid="uid://kgjl4oco0er5" path="res://components/config.tscn" id="1_xp82x"]
[ext_resource type="PackedScene" uid="uid://dsbccfynojfe" path="res://components/main_screen.tscn" id="2_sximq"]
[ext_resource type="Script" uid="uid://btmxcmsjoskn5" path="res://theme.gd" id="4_u782i"]

[node name="GlitchPad" type="Node"]
script = ExtResource("1_sximq")

[node name="Config" parent="." instance=ExtResource("1_xp82x")]

[node name="MainScreen" parent="." instance=ExtResource("2_sximq")]

[node name="Theme" type="Node" parent="."]
script = ExtResource("4_u782i")

[node name="LaunchTimer" type="Timer" parent="."]
one_shot = true

[node name="CloseTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
